fixes broken css

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -62,7 +62,7 @@ body {
 .form-style-6 h1{
     background: #43D1AF;
     padding: 20px 0;
-    font-size: 20s0%;
+    font-size: 200%;
     font-weight: 300;
     text-align: center;
     color: #fff;
